fix alignment on navigation

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -732,7 +732,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin:0;
     padding:0;
     top:10px;
-    right:0;
+    right:-20px;
 }
  #main-nav a {
     display:block;
